@startuml

package com.gelvt.gofdp.state{

    interface ClientState<<即时通讯软件客户端状态>> {
        + {abstract} showChatForm() : void
        + {abstract} sendMessage(message : String, receiver : String) : void
    }

    class MessengerClient <<即时通讯软件客户端>> {
        - state : ClientState
        - username : String
        + MessengerClient(state : ClientState, username : String)
        + setState(state : ClientState) : void
        + getUsername() : String
        + showChatForm() : void
        + sendMessage(message : String, receiver : String) : void
    }

    class OnlineState <<在线状态（正常状态）>> {
        - MessengerClient client;
        + OnlineState(client : MessengerClient)
        + showChatForm() : void
        + sendMessage(message : String, receiver : String) : void
    }

    class OfflineState <<离线状态>> {
        + showChatForm() : void
        + sendMessage(message : String, receiver : String) : void
    }

    class LockedState <<客户端锁定状态>> {
        - MessengerClient client;
        + OnlineState(client : MessengerClient)
        + showChatForm() : void
        + sendMessage(message : String, receiver : String) : void
    }

    MessengerClient o--> ClientState
    ClientState <|.. OnlineState
    ClientState <|.. OfflineState
    ClientState <|.. LockedState

}

package com.gelvt.gofdp{
    class App <<Client>>{
        + main(args : String[]) : void
    }
}

App ..> MessengerClient


footer
<font size="20" color="red">http://www.bughui.com</font>
endfooter

@enduml